--- a/CSS Navigation Bar/Vertical Navbar/index.html
+++ b/CSS Navigation Bar/Vertical Navbar/index.html
@@ -5,17 +5,80 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <title>Nav Bar</title>
+    <title>Sticky Navigation Bar</title>
   </head>
   <body>
+    <div class="header">
+      <h2>Scroll down</h2>
+      <p>Scroll down to see the sticky effect</p>
+    </div>
     <ul>
       <li><a class="active" href="#">Home</a></li>
       <li><a href="#">News</a></li>
       <li><a href="#">Contact</a></li>
-      <li><a href="#">About</a></li>
+      <li class="right"><a href="#">About</a></li>
     </ul>
 
-    <div style="margin-left: 25%; padding: 1px 16px; height: 1000px">
+    <h3>Sticky Navigation Bar Example</h3>
+    <p>
+      The navbar will <strong>stick</strong> to the top when you reach its
+      scroll position.
+    </p>
+    <p>
+      <strong>Note:</strong> Internet Explorer do not support sticky positioning
+      and Safari requires a -webkit- prefix.
+    </p>
+    <p>
+      Some text to enable scrolling. Lorem ipsum dolor sit amet, illum
+      definitiones no quo, maluisset concludaturque et eum, altera fabulas ut
+      quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert
+      laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no
+      molestiae voluptatibus.
+    </p>
+    <p>
+      Some text to enable scrolling. Lorem ipsum dolor sit amet, illum
+      definitiones no quo, maluisset concludaturque et eum, altera fabulas ut
+      quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert
+      laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no
+      molestiae voluptatibus.
+    </p>
+    <p>
+      Some text to enable scrolling. Lorem ipsum dolor sit amet, illum
+      definitiones no quo, maluisset concludaturque et eum, altera fabulas ut
+      quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert
+      laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no
+      molestiae voluptatibus.
+    </p>
+    <p>
+      Some text to enable scrolling. Lorem ipsum dolor sit amet, illum
+      definitiones no quo, maluisset concludaturque et eum, altera fabulas ut
+      quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert
+      laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no
+      molestiae voluptatibus.
+    </p>
+    <p>
+      Some text to enable scrolling. Lorem ipsum dolor sit amet, illum
+      definitiones no quo, maluisset concludaturque et eum, altera fabulas ut
+      quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert
+      laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no
+      molestiae voluptatibus.
+    </p>
+    <p>
+      Some text to enable scrolling. Lorem ipsum dolor sit amet, illum
+      definitiones no quo, maluisset concludaturque et eum, altera fabulas ut
+      quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert
+      laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no
+      molestiae voluptatibus.
+    </p>
+    <p>
+      Some text to enable scrolling. Lorem ipsum dolor sit amet, illum
+      definitiones no quo, maluisset concludaturque et eum, altera fabulas ut
+      quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert
+      laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no
+      molestiae voluptatibus.
+    </p>
+
+    <!-- <div style="margin-left: 25%; padding: 1px 16px; height: 1000px">
       <h2>Fixed Full-height Side Nav</h2>
       <h3>
         Try to scroll this area, and see how the sidenav sticks to the page
@@ -37,6 +100,6 @@
       <p>Some text..</p>
       <p>Some text..</p>
       <p>Some text..</p>
-    </div>
+    </div> -->
   </body>
 </html>
