Responsive side nav

--- a/CSS Navigation Bar/Vertical Navbar/index.html
+++ b/CSS Navigation Bar/Vertical Navbar/index.html
@@ -8,7 +8,9 @@
     <title>Sticky Navigation Bar</title>
   </head>
   <body>
-    <div class="header">
+    <!-- Responsive Topnav -->
+
+    <!-- <div class="header">
       <h2>Scroll down</h2>
       <p>Scroll down to see the sticky effect</p>
     </div>
@@ -76,7 +78,7 @@
       quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert
       laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no
       molestiae voluptatibus.
-    </p>
+    </p> -->
 
     <!-- <div style="margin-left: 25%; padding: 1px 16px; height: 1000px">
       <h2>Fixed Full-height Side Nav</h2>
@@ -101,5 +103,31 @@
       <p>Some text..</p>
       <p>Some text..</p>
     </div> -->
+
+    <!-- Responsive Sidenav -->
+
+    <ul class="sidenav">
+      <li><a class="active" href="#home">Home</a></li>
+      <li><a href="#news">News</a></li>
+      <li><a href="#contact">Contact</a></li>
+      <li><a href="#about">About</a></li>
+    </ul>
+
+    <div class="content">
+      <h2>Responsive Sidenav Example</h2>
+      <p>
+        This example use media queries to transform the sidenav to a top
+        navigation bar when the screen size is 900px or less.
+      </p>
+      <p>
+        We have also added a media query for screens that are 400px or less,
+        which will vertically stack and center the navigation links.
+      </p>
+      <p>
+        You will learn more about media queries and responsive web design later
+        in our CSS Tutorial.
+      </p>
+      <h3>Resize the browser window to see the effect.</h3>
+    </div>
   </body>
 </html>
