--- a/CSS Navigation Bar/Vertical Navbar/index.html
+++ b/CSS Navigation Bar/Vertical Navbar/index.html
@@ -106,7 +106,7 @@
 
     <!-- Responsive Sidenav -->
 
-    <ul class="sidenav">
+    <!-- <ul class="sidenav">
       <li><a class="active" href="#home">Home</a></li>
       <li><a href="#news">News</a></li>
       <li><a href="#contact">Contact</a></li>
@@ -128,6 +128,21 @@
         in our CSS Tutorial.
       </p>
       <h3>Resize the browser window to see the effect.</h3>
-    </div>
+    </div> -->
+
+    <!-- Dropdown Navbar -->
+
+    <ul>
+      <li><a href="#">Home</a></li>
+      <li><a href="#">News</a></li>
+      <li class="dropdown">
+        <a class="dropdown__btn" href="javascript: void(0)">Dropdown</a>
+        <div class="dropdown__content">
+          <a href="#">Item 1</a>
+          <a href="#">Item 2</a>
+          <a href="#">Item 3</a>
+        </div>
+      </li>
+    </ul>
   </body>
 </html>
