--- a/CSS Dropdown/index.html
+++ b/CSS Dropdown/index.html
@@ -8,13 +8,29 @@
     <title>CSS Dropdown</title>
   </head>
   <body>
-    <h2>Hoverable Dropdown</h2>
+    <!-- Basic Dropdown -->
+
+    <!-- <h2>Hoverable Dropdown</h2>
     <p>Move the mouse over the text below to open the dropdown content</p>
 
     <div class="dropdown">
       <span>Mouse over me</span>
       <div class="dropdown__content">
         <p>Hello World!</p>
+      </div>
+    </div> -->
+
+    <!-- Dropdown Menu -->
+
+    <h2>Dropdown Menu</h2>
+    <p>Move the mouse over the button to open the dropdown menu</p>
+
+    <div class="dropdown">
+      <button class="dropbtn">Dropdown</button>
+      <div class="dropdown__content">
+        <a href="#">Item 1</a>
+        <a href="#">Item 2</a>
+        <a href="#">Item 3</a>
       </div>
     </div>
   </body>
