--- a/CSS Dropdown/index.html
+++ b/CSS Dropdown/index.html
@@ -22,7 +22,7 @@
 
     <!-- Dropdown Menu -->
 
-    <h2>Dropdown Menu</h2>
+    <!-- <h2>Dropdown Menu</h2>
     <p>Move the mouse over the button to open the dropdown menu</p>
 
     <div class="dropdown">
@@ -32,6 +32,20 @@
         <a href="#">Item 2</a>
         <a href="#">Item 3</a>
       </div>
-    </div>
+    </div> -->
+
+    <!-- Dropdown Navbar -->
+    <ul>
+      <li><a href="#">Home</a></li>
+      <li><a href="#">News</a></li>
+      <li class="dropdown">
+        <a href="#" class="dropbtn">Dropdown</a>
+        <div class="dropdown__content">
+          <a href="#">Link 1</a>
+          <a href="#">Link 2</a>
+          <a href="#">Link 3</a>
+        </div>
+      </li>
+    </ul>
   </body>
 </html>
