--- a/CSS Dropdown/index.html
+++ b/CSS Dropdown/index.html
@@ -35,7 +35,7 @@
     </div> -->
 
     <!-- Dropdown Navbar -->
-    <ul>
+    <!-- <ul>
       <li><a href="#">Home</a></li>
       <li><a href="#">News</a></li>
       <li class="dropdown">
@@ -46,6 +46,19 @@
           <a href="#">Link 3</a>
         </div>
       </li>
-    </ul>
+    </ul> -->
+
+    <!-- Dropdown Image -->
+
+    <!-- <h2>Dropdown Image</h2>
+    <p>Move the mouse over the image below to open the dropdown content</p>
+
+    <div class="dropdown">
+      <img class="dropdown__img-1" src="../img/img_5terre.jpg" alt="#" />
+      <div class="dropdown__content">
+        <img class="dropdown__img-2" src="../img/img_5terre.jpg" alt="#" />
+        <div class="dropdown__content-text">Beautiful Cinque Terre</div>
+      </div>
+    </div> -->
   </body>
 </html>
