--- a/CSS Forms/index.html
+++ b/CSS Forms/index.html
@@ -35,6 +35,8 @@
           <option value="Canada">Canada</option>
         </select>
 
+        <input type="text" name="search" placeholder="Search..." />
+
         <input type="submit" value="Submit" />
       </form>
     </div>
