Website Layout Navigation Bar

--- a/CSS Website Layout/index.html
+++ b/CSS Website Layout/index.html
@@ -15,5 +15,13 @@ A header is usually located at the top of the website (or right below a top navi
     <div class="header">
       <h1>Header</h1>
     </div>
+
+    <!-- Navigation Bar
+A navigation bar contains a list of links to help visitors navigating through your website: -->
+    <div class="topnav">
+      <a href="#">Link</a>
+      <a href="#">Link</a>
+      <a href="#">Link</a>
+    </div>
   </body>
 </html>
