--- a/CSS Website Layout/index.html
+++ b/CSS Website Layout/index.html
@@ -23,5 +23,47 @@ A navigation bar contains a list of links to help visitors navigating through yo
       <a href="#">Link</a>
       <a href="#">Link</a>
     </div>
+
+    <!-- Content
+The layout in this section, often depends on the target users. The most common layout is one (or combining them) of the following:
+
+1-column (often used for mobile browsers)
+2-column (often used for tablets and laptops)
+3-column layout (only used for desktops) -->
+    <!-- We will create a 3-column layout, and change it to a 1-column layout on smaller screens: -->
+    <div class="row">
+      <div class="col">
+        <h2>Column</h2>
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugiat quo
+          vel quisquam soluta repudiandae porro culpa totam tempore dolor
+          similique. orem ipsum, dolor sit amet consectetur adipisicing elit.
+          Veniam dolor culpa aperiam quaerat aliquid corporis sapiente dolore
+          quae obcaecati ducimus.
+        </p>
+      </div>
+
+      <div class="col">
+        <h2>Column</h2>
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugiat quo
+          vel quisquam soluta repudiandae porro culpa totam tempore dolor
+          similique. orem ipsum, dolor sit amet consectetur adipisicing elit.
+          Veniam dolor culpa aperiam quaerat aliquid corporis sapiente dolore
+          quae obcaecati ducimus.
+        </p>
+      </div>
+
+      <div class="col">
+        <h2>Column</h2>
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugiat quo
+          vel quisquam soluta repudiandae porro culpa totam tempore dolor
+          similique. orem ipsum, dolor sit amet consectetur adipisicing elit.
+          Veniam dolor culpa aperiam quaerat aliquid corporis sapiente dolore
+          quae obcaecati ducimus.
+        </p>
+      </div>
+    </div>
   </body>
 </html>
