Web Layout Footer

--- a/CSS Website Layout/index.html
+++ b/CSS Website Layout/index.html
@@ -65,5 +65,11 @@ The layout in this section, often depends on the target users. The most common l
         </p>
       </div>
     </div>
+
+    <!-- Footer
+The footer is placed at the bottom of your page. It often contains information like copyright and contact info: -->
+    <div class="footer">
+      <p>Footer</p>
+    </div>
   </body>
 </html>
