--- a/CSS Responsive Website Layout/index.html
+++ b/CSS Responsive Website Layout/index.html
@@ -21,5 +21,61 @@
       <a href="#">Link</a>
       <a href="#" class="right">Link</a>
     </div>
+
+    <!-- Main Content -->
+    <div class="row">
+      <div class="leftcolumn">
+        <div class="card">
+          <h2>TITLE HEADING</h2>
+          <h5>Title description, Dec 7, 2017</h5>
+          <div class="fakeimage" style="height: 200px">Image</div>
+          <p>Some text...</p>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam
+            cumque totam maxime? Libero explicabo nostrum provident eligendi
+            molestias quia velit!
+          </p>
+        </div>
+        <div class="card">
+          <h2>TITLE HEADING</h2>
+          <h5>Title description, Dec 7, 2017</h5>
+          <div class="fakeimage" style="height: 200px">Image</div>
+          <p>Some text...</p>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam
+            cumque totam maxime? Libero explicabo nostrum provident eligendi
+            molestias quia velit!
+          </p>
+        </div>
+      </div>
+      <div class="rightcolumn">
+        <div class="card">
+          <h2>About Me</h2>
+          <div class="fakeimage" style="height: 100px">Image</div>
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi,
+            inventore.
+          </p>
+        </div>
+        <div class="card">
+          <h2>Popular Post</h2>
+          <div class="fakeimage" style="height: 100px">Image</div>
+          <div class="fakeimage" style="height: 100px">Image</div>
+          <div class="fakeimage" style="height: 100px">Image</div>
+        </div>
+        <div class="card">
+          <h2>Follow Me</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro,
+            odio.
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <!-- Footer -->
+    <div class="footer">
+      <h1>Footer</h1>
+    </div>
   </body>
 </html>
