Complete responsive website layout

--- a/CSS Responsive Website Layout/index.html
+++ b/CSS Responsive Website Layout/index.html
@@ -8,74 +8,66 @@
     <title>Responsive Website Layout</title>
   </head>
   <body>
-    <!-- Header -->
     <div class="header">
       <h1>My Website</h1>
-      <p>Resize the browser window to see the effect</p>
+      <p>Resize the browser window to see the effect.</p>
     </div>
 
-    <!-- Top Navigation Bar -->
     <div class="topnav">
       <a href="#">Link</a>
       <a href="#">Link</a>
       <a href="#">Link</a>
-      <a href="#" class="right">Link</a>
+      <a href="#" style="float: right">Link</a>
     </div>
 
-    <!-- Main Content -->
     <div class="row">
       <div class="leftcolumn">
         <div class="card">
           <h2>TITLE HEADING</h2>
           <h5>Title description, Dec 7, 2017</h5>
-          <div class="fakeimage" style="height: 200px">Image</div>
-          <p>Some text...</p>
+          <div class="fakeimg" style="height: 200px">Image</div>
+          <p>Some text..</p>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam
-            cumque totam maxime? Libero explicabo nostrum provident eligendi
-            molestias quia velit!
+            Sunt in culpa qui officia deserunt mollit anim id est laborum
+            consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+            labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+            exercitation ullamco.
           </p>
         </div>
         <div class="card">
           <h2>TITLE HEADING</h2>
-          <h5>Title description, Dec 7, 2017</h5>
-          <div class="fakeimage" style="height: 200px">Image</div>
-          <p>Some text...</p>
+          <h5>Title description, Sep 2, 2017</h5>
+          <div class="fakeimg" style="height: 200px">Image</div>
+          <p>Some text..</p>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam
-            cumque totam maxime? Libero explicabo nostrum provident eligendi
-            molestias quia velit!
+            Sunt in culpa qui officia deserunt mollit anim id est laborum
+            consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+            labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+            exercitation ullamco.
           </p>
         </div>
       </div>
       <div class="rightcolumn">
         <div class="card">
           <h2>About Me</h2>
-          <div class="fakeimage" style="height: 100px">Image</div>
-          <p>
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi,
-            inventore.
-          </p>
+          <div class="fakeimg" style="height: 100px">Image</div>
+          <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
         </div>
         <div class="card">
-          <h2>Popular Post</h2>
-          <div class="fakeimage" style="height: 100px">Image</div>
-          <div class="fakeimage" style="height: 100px">Image</div>
-          <div class="fakeimage" style="height: 100px">Image</div>
+          <h3>Popular Post</h3>
+          <div class="fakeimg"><p>Image</p></div>
+          <div class="fakeimg"><p>Image</p></div>
+          <div class="fakeimg"><p>Image</p></div>
         </div>
         <div class="card">
-          <h2>Follow Me</h2>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro,
-            odio.
-          </p>
+          <h3>Follow Me</h3>
+          <p>Some text..</p>
         </div>
       </div>
     </div>
 
-    <!-- Footer -->
     <div class="footer">
-      <h1>Footer</h1>
+      <h2>Footer</h2>
     </div>
   </body>
 </html>
