css float example

--- a/CSS Float/index.html
+++ b/CSS Float/index.html
@@ -6,13 +6,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <style>
-      div {
+      /* div {
         border: 3px solid red;
         padding: 10px;
-        /* overflow: auto; */
       }
       .img1 {
         float: right;
+      }
+
+      .clearfix::after {
+        content: "";
+        display: block;
+        clear: both;
+      } */
+
+      * {
+        box-sizing: border-box;
+      }
+
+      .container {
+        background-color: red;
+        padding: 10px;
+      }
+
+      .box {
+        padding: 50px;
+        width: 33.33%;
+        float: left;
       }
 
       .clearfix::after {
@@ -23,7 +43,7 @@
     </style>
   </head>
   <body>
-    <div class="clearfix">
+    <!-- <div class="clearfix">
       <img
         class="img1"
         src="image/pineapple.jpg"
@@ -31,8 +51,25 @@
         width="170"
         height="170"
       />
-      <!-- Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus
-      imperdiet... -->
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus
+      imperdiet... -
+    </div> -->
+
+    <!-- CSS Float Example -->
+    <h2>Grid of Boxes</h2>
+    <p>Float boxes side by side:</p>
+
+    <div class="clearfix container">
+      <div class="box" style="background-color: #ccc">Some text goes here</div>
+      <div class="box" style="background-color: #ddd">Some text goes here</div>
+      <div class="box" style="background-color: #eee">Some text goes here</div>
     </div>
+
+    <p>
+      <strong>Note:</strong> Here, we use the clearfix hack to take care of the
+      layout flow. We also use the box-sizing property to make sure that the box
+      doesn't break due to extra padding. Try to remove this code to see the
+      effect.
+    </p>
   </body>
 </html>
