--- a/CSS Float/index.html
+++ b/CSS Float/index.html
@@ -20,7 +20,7 @@
         clear: both;
       } */
 
-      * {
+      /* * {
         box-sizing: border-box;
       }
 
@@ -33,6 +33,27 @@
         padding: 50px;
         width: 33.33%;
         float: left;
+      }
+
+      .clearfix::after {
+        content: "";
+        display: block;
+        clear: both;
+      } */
+
+      * {
+        box-sizing: border-box;
+      }
+
+      .img-container {
+        width: 33.33%;
+        float: left;
+        /* padding: 5px; */
+      }
+
+      .container {
+        background-color: red;
+        padding: 10px;
       }
 
       .clearfix::after {
@@ -56,7 +77,7 @@
     </div> -->
 
     <!-- CSS Float Example -->
-    <h2>Grid of Boxes</h2>
+    <!-- <h2>Grid of Boxes</h2>
     <p>Float boxes side by side:</p>
 
     <div class="clearfix container">
@@ -70,6 +91,26 @@
       layout flow. We also use the box-sizing property to make sure that the box
       doesn't break due to extra padding. Try to remove this code to see the
       effect.
+    </p> -->
+
+    <h2>Images Side by Side</h2>
+    <p>Float images side by side:</p>
+    <div class="clearfix container">
+      <div class="img-container">
+        <img src="image/img_5terre.jpg" alt="" style="width: 100%" />
+      </div>
+      <div class="img-container">
+        <img src="image/img_forest.jpg" alt="" style="width: 100%" />
+      </div>
+      <div class="img-container">
+        <img src="image/img_mountains.jpg" alt="" style="width: 100%" />
+      </div>
+    </div>
+    <p>
+      Note that we also use the clearfix hack to take care of the layout flow,
+      and that we add the box-sizing property to make sure that the image
+      container doesn't break due to extra padding. Try to remove this code to
+      see the effect.
     </p>
   </body>
 </html>
